Small additional edits to PoissonDeterministic

--- a/notebooks/PoissonDeterministic-InexactNewton.ipynb
+++ b/notebooks/PoissonDeterministic-InexactNewton.ipynb
@@ -35,7 +35,7 @@
       "\\end{split}\n",
       "$$\n",
       "\n",
-      "Here $a\\in U_{ad}:=\\{a\\in L^{\\infty}(\\Omega)\\}$ the unknown coefficient field, $u_d$ denotes (possibly noisy) data, $f\\in H^{-1}(\\Omega)$ a given force, and $\\gamma\\ge 0$ the regularization parameter.\n",
+      "Here $a\\in U_{ad}:=\\{a\\in H^1(\\Omega) \\bigcap L^{\\infty}(\\Omega)\\}$ the unknown coefficient field, $u_d$ denotes (possibly noisy) data, $f\\in H^{-1}(\\Omega)$ a given force, and $\\gamma\\ge 0$ the regularization parameter.\n",
       "\n",
       "### The variational (or weak) form of the state equation:\n",
       "\n",
@@ -44,7 +44,7 @@
       "\n",
       "### Optimality System:\n",
       "\n",
-      "The Lagrangian functional $\\mathscr{L}:L^\\infty(\\Omega)\\times H_0^1(\\Omega)\\times H_0^1(\\Omega)\\rightarrow \\mathbb{R}$, which we use as a tool to derive the optimality system, is given by\n",
+      "The Lagrangian functional $\\mathscr{L}:H^1(\\Omega)\\times H_0^1(\\Omega)\\times H_0^1(\\Omega)\\rightarrow \\mathbb{R}$, which we use as a tool to derive the optimality system, is given by\n",
       "\n",
       "$$\n",
       "\\mathscr{L}(a,u,p):= \\frac{1}{2}(u-u_d,u-u_d) +\n",
@@ -466,14 +466,29 @@
      "source": [
       "### The reduced Hessian apply to a vector v:\n",
       "\n",
+      "Here we describe how to apply the reduced Hessian operator to a vector v. For an opportune choice of the regularization, the reduced Hessian operator evaluated in a neighborhood of the solution is positive define, whereas far from the solution the reduced Hessian may be indefinite. On the constrary, the Gauss-Newton approximation of the Hessian is always positive defined.\n",
+      "\n",
+      "For this reason, it is beneficial to perform a few initial Gauss-Newton steps (5 in this particular example) to accelerate the convergence of the inexact Newton-CG algorithm.\n",
+      "\n",
+      "The Hessian apply reads:\n",
       "$$\n",
       "\\begin{align}\n",
-      "\\bhu &= -\\bf A^{-1} \\bf C \\, & \\text{linearized forward}\\\\\n",
+      "\\bhu &= -\\bf A^{-1} \\bf C \\bf v\\, & \\text{linearized forward}\\\\\n",
       "\\bhp &= -\\bf A^{-T} (\\bf W_{\\scriptsize\\mbox{uu}} \\bhu +\n",
       "\\bf W_{\\scriptsize\\mbox{ua}}\\,\\bha) & \\text{adjoint}\\\\\n",
       "\\bf H \\bf v &= (\\bf R + \\bf R_{\\scriptsize\\mbox{aa}})\\bf v + \\bf C^T \\bhp + \\bf W_{\\scriptsize\\mbox{au}} \\bhu.\n",
       "\\end{align}\n",
-      "$$"
+      "$$\n",
+      "\n",
+      "The Gauss-Newton Hessian apply is obtained by dropping the second derivatives operators $\\bf W_{\\scriptsize\\mbox{ua}}\\,\\bha$, $\\bf R_{\\scriptsize\\mbox{aa}}\\bf v$, and $\\bf W_{\\scriptsize\\mbox{au}} \\bhu$:\n",
+      "$$\n",
+      "\\begin{align}\n",
+      "\\bhu &= -\\bf A^{-1} \\bf C \\bf v\\, & \\text{linearized forward}\\\\\n",
+      "\\bhp &= -\\bf A^{-T} \\bf W_{\\scriptsize\\mbox{uu}} \\bhu & \\text{adjoint}\\\\\n",
+      "\\bf H_{\\rm GN} \\bf v &= \\bf R \\bf v + \\bf C^T \\bhp.\n",
+      "\\end{align}\n",
+      "$$\n",
+      "\n"
      ]
     },
     {
@@ -541,7 +556,21 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## The inexact Newton-CG optimization with Armijo line search:"
+      "## The inexact Newton-CG optimization with Armijo line search:\n",
+      "\n",
+      "We solve the constrained optimization problem using the inexact Newton-CG method with Armijo line search.\n",
+      "\n",
+      "The stopping criterion is based on a relative reduction of the norm of the gradient (i.e. $\\frac{\\|g_{n}\\|}{\\|g_{0}\\|} \\leq \\tau$).\n",
+      "\n",
+      "First, we compute the gradient by solving the state and adjoint equation for the current parameter $a$, and then substituing the current state $u$, parameter $a$ and adjoint $p$ variables in the weak form expression of the gradient:\n",
+      "$$ (g, \\tilde{a}) = \\gamma(\\nabla a, \\nabla \\tilde{a}) +(\\tilde{a}\\nabla u, \\nabla p).$$\n",
+      "\n",
+      "Then, we compute the Newton direction $\\delta a$ by iteratively solving ${\\bf H} {\\delta a} = - {\\bf g}$.\n",
+      "The Newton system is solved inexactly by early termination of conjugate gradient iterations via Eisenstat\u2013Walker (to prevent oversolving) and Steihaug  (to avoid negative curvature) criteria.\n",
+      "\n",
+      "Finally, the Armijo line search uses backtracking to find $\\alpha$ such that a sufficient reduction in the cost functional is achieved.\n",
+      "More specifically, we use backtracking to find $\\alpha$ such that:\n",
+      "$$J( a + \\alpha \\delta a ) \\leq J(a) + \\alpha c_{\\rm armijo} (\\delta a,g). $$"
      ]
     },
     {
