Fix small bug in PoissonDeterminic-InexactNewton

--- a/notebooks/PoissonDeterministic-InexactNewton.ipynb
+++ b/notebooks/PoissonDeterministic-InexactNewton.ipynb
@@ -659,7 +659,7 @@
       "        [cost_new, misfit_new, reg_new] = cost(u, ud, a, W, R)\n",
       "\n",
       "        # check if Armijo conditions are satisfied\n",
-      "        if cost_new < cost_old - alpha * c * grad2:\n",
+      "        if cost_new < cost_old + alpha * c * MG.inner(a_delta):\n",
       "            cost_old = cost_new\n",
       "            descent = 1\n",
       "        else:\n",
