Clean up the demonstration notebooks

--- a/notebooks/AdvectionDiffusionBayesian.ipynb
+++ b/notebooks/AdvectionDiffusionBayesian.ipynb
@@ -282,7 +282,7 @@
      "collapsed": false,
      "input": [
       "a0 = true_initial_condition.copy()\n",
-      "modelVerify(problem, a0, 1e-4, 1e-4)"
+      "modelVerify(problem, a0, 1e-12)"
      ],
      "language": "python",
      "metadata": {},
