--- a/notebooks/SubsurfaceBayesian.ipynb
+++ b/notebooks/SubsurfaceBayesian.ipynb
@@ -399,7 +399,7 @@
      "collapsed": false,
      "input": [
       "a0 = dl.interpolate(dl.Expression(\"sin(x[0])\"), Vh[PARAMETER])\n",
-      "modelVerify(model, a0.vector(), 1e-4, 1e-6)"
+      "modelVerify(model, a0.vector(), 1e-12)"
      ],
      "language": "python",
      "metadata": {},
