Fix-up CHANGELOG, INSTALL, and README

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-                     Inverse Problem PYthon library
+                        Inverse Problem PYthon library
 
 
  __        ______  _______   _______   __      __  __  __  __       
@@ -13,11 +13,10 @@ $$/   $$/ $$$$$$/ $$/       $$/           $$/     $$/ $$/ $$$$$$$/
                                                                     
                                                                     
 
-                           <hippylib_website>
+                          https://hippylib.github.io
                            
-Version 1.0, released on Oct 1, 2015
+Version 1.0, released on Apr 1, 2016
 =====================================
 
-- Uploaded to <hippylib_website>.
-
+- Uploaded to https://hippylib.github.io.
 - Initial release.
