Rename model_gls --> model_ad_diff
Rename folder notebooks --> tutorial

--- a/tutorial/AdvectionDiffusionBayesian.ipynb
+++ b/tutorial/AdvectionDiffusionBayesian.ipynb
@@ -120,7 +120,7 @@
       "import matplotlib.pyplot as plt\n",
       "%matplotlib inline\n",
       "sys.path.append( \"../applications/ad_diff/\" )\n",
-      "from model_gls import TimeDependentAD\n",
+      "from model_ad_diff import TimeDependentAD\n",
       "\n",
       "import nb\n",
       "\n",
