First attempt to fix up the notebooks.
Some work still needed.

--- a/tutorial/SubsurfaceBayesian.ipynb
+++ b/tutorial/SubsurfaceBayesian.ipynb
@@ -194,6 +194,7 @@
       "\n",
       "### This tutorial shows:\n",
       "\n",
+      "- description of the inverse problem (the forward problem, the prior, and the misfit functional)\n",
       "- convergence of the inexact Newton-CG algorithm\n",
       "- low-rank-based approximation of the posterior covariance (built on a low-rank\n",
       "approximation of the Hessian of the data misfit) \n",
@@ -236,8 +237,6 @@
       "import numpy as np\n",
       "import matplotlib.pyplot as plt\n",
       "%matplotlib inline\n",
-      "sys.path.append( \"../applications/poisson/\" )\n",
-      "from model_subsurf import Poisson, true_model\n",
       "\n",
       "import nb\n",
       "\n",
@@ -246,10 +245,35 @@
       "logging.getLogger('UFL').setLevel(logging.WARNING)\n",
       "dl.set_log_active(False)\n",
       "\n",
-      "np.random.seed(seed=1)\n",
+      "np.random.seed(seed=1)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Generate the true parameter\n",
       "\n",
-      "#uncomment this to visualize a list of all the methods available \n",
-      "#help(Poisson)"
+      "This function generates a random field with a prescribed anysotropic covariance function."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def true_model(Vh, gamma, delta, anis_diff):\n",
+      "    prior = BiLaplacianPrior(Vh, gamma, delta, anis_diff )\n",
+      "    noise = dl.Vector()\n",
+      "    prior.init_vector(noise,\"noise\")\n",
+      "    noise_size = noise.array().shape[0]\n",
+      "    noise.set_local( np.random.randn( noise_size ) )\n",
+      "    atrue = dl.Vector()\n",
+      "    prior.init_vector(atrue, 0)\n",
+      "    prior.sample(noise,atrue)\n",
+      "    return atrue"
      ],
      "language": "python",
      "metadata": {},
@@ -286,12 +310,49 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##Set up the location of observation, Prior Information, and model\n",
+      "## Set up the forward problem\n",
       "\n",
-      "To setup the observation operator, we generate *ntargets* random locations where to evaluate the value of the state.\n",
+      "To set up the forward problem we use the `PDEVariationalProblem` class, which requires the following inputs\n",
+      "- the finite element spaces for the state, parameter, and adjoint variables `Vh`\n",
+      "- the pde in weak form `pde_varf`\n",
+      "- the boundary conditions `bc` for the forward problem and `bc0` for the adjoint and incremental problems.\n",
       "\n",
-      "To obtain the synthetic true paramter $a_{\\rm true}$ we generate a realization of a Gaussian random field with zero average and covariance matrix $\\mathcal{C} = \\widetilde{\\mathcal{A}}^{-1}$, where $\\widetilde{\\mathcal{A}}$ is a differential operator of the form\n",
-      "$$ \\widetilde{\\mathcal{A}} = \\gamma {\\rm div}\\, \\Theta\\, {\\rm grad} + \\delta I $$\n",
+      "The `PDEVariationalProblem` class offer the following functionality:\n",
+      "- solving the forward/adjoint and incremental problems\n",
+      "- evaluate first and second partial derivative of the forward problem with respect to the state, parameter, and adojnt variables."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def u_boundary(x, on_boundary):\n",
+      "    return on_boundary and ( x[1] < dl.DOLFIN_EPS or x[1] > 1.0 - dl.DOLFIN_EPS)\n",
+      "\n",
+      "u_bdr = dl.Expression(\"x[1]\")\n",
+      "u_bdr0 = dl.Expression(\"0.0\")\n",
+      "bc = dl.DirichletBC(Vh[STATE], u_bdr, u_boundary)\n",
+      "bc0 = dl.DirichletBC(Vh[STATE], u_bdr0, u_boundary)\n",
+      "\n",
+      "f = dl.Expression(\"0.0\")\n",
+      "    \n",
+      "def pde_varf(u,a,p):\n",
+      "    return dl.exp(a)*dl.inner(dl.nabla_grad(u), dl.nabla_grad(p))*dl.dx - f*p*dl.dx\n",
+      "    \n",
+      "pde = PDEVariationalProblem(Vh, pde_varf, bc, bc0)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "##Set up the prior\n",
+      "\n",
+      "To obtain the synthetic true paramter $a_{\\rm true}$ we generate a realization of a Gaussian random field with zero average and covariance matrix $\\mathcal{C} = \\widetilde{\\mathcal{A}}^{-2}$, where $\\widetilde{\\mathcal{A}}$ is a differential operator of the form\n",
+      "$$ \\widetilde{\\mathcal{A}} = \\gamma {\\rm div}\\, \\Theta\\, {\\rm grad} + \\delta I. $$\n",
       "Here $\\Theta$ is an s.p.d. anisotropic tensor of the form\n",
       "$$ \\Theta =\n",
       "\\begin{bmatrix}\n",
@@ -312,17 +373,13 @@
       "a_{\\rm pr} = arg\\min_{m} \\frac{1}{2}\\langle a, \\widetilde{\\mathcal{A}} a\\rangle + \\frac{p}{2}\\langle a_{\\rm true} - a, \\mathcal{M}(a_{\\rm true}- a) \\rangle.\n",
       "$$\n",
       "\n",
-      "Finally the prior distribution is $\\mathcal{N}(a_{\\rm pr}, \\mathcal{C}_{\\rm prior})$, with $\\mathcal{C}_{\\rm prior} = \\mathcal{A}^2$."
+      "Finally the prior distribution is $\\mathcal{N}(a_{\\rm pr}, \\mathcal{C}_{\\rm prior})$, with $\\mathcal{C}_{\\rm prior} = \\mathcal{A}^{-2}$."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ntargets = 300\n",
-      "targets = np.random.uniform(0.1,0.9, [ntargets, ndim] )\n",
-      "print \"Number of observation points: {0}\".format(ntargets)\n",
-      "    \n",
       "gamma = .1\n",
       "delta = .5\n",
       "    \n",
@@ -343,7 +400,7 @@
       "nb.multi1_plot(objs, mytitles)\n",
       "plt.show()\n",
       "\n",
-      "model = Poisson(mesh, Vh, targets, prior)"
+      "model = Model(pde,prior, misfit)"
      ],
      "language": "python",
      "metadata": {},
@@ -353,7 +410,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Generate synthetic observations\n",
+      "## Set up the misfit functional and generate synthetic observations\n",
+      "\n",
+      "To setup the observation operator, we generate *ntargets* random locations where to evaluate the value of the state.\n",
       "\n",
       "To generate the synthetic observation, we first solve the forward problem using the true parameter $a_{\\rm true}$. Synthetic observations are obtained by perturbing the state variable at the observation points with a random gaussian noise.\n",
       "*rel_noise* is the signal to noise ratio."
@@ -363,22 +422,29 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "ntargets = 300\n",
       "rel_noise = 0.01\n",
       "\n",
-      "utrue = model.generate_vector(STATE)\n",
-      "model.solveFwd(utrue, [utrue, atrue])\n",
-      "model.B.mult(utrue, model.u_o)\n",
-      "MAX = model.u_o.norm(\"linf\")\n",
-      "noise_std_dev = rel_noise * MAX\n",
-      "randn_perturb(model.u_o, noise_std_dev)\n",
-      "model.noise_variance = noise_std_dev*noise_std_dev\n",
       "\n",
-      "vmax = max( utrue.max(), model.u_o.max() )\n",
-      "vmin = min( utrue.min(), model.u_o.min() )\n",
+      "targets = np.random.uniform(0.1,0.9, [ntargets, ndim] )\n",
+      "print \"Number of observation points: {0}\".format(ntargets)\n",
+      "misfit = PointwiseStateObservation(Vh[STATE], targets)\n",
+      "\n",
+      "utrue = pde.generate_state()\n",
+      "x = [utrue, atrue, None]\n",
+      "pde.solveFwd(x[STATE], x, 1e-9)\n",
+      "misfit.B.mult(x[STATE], misfit.d)\n",
+      "MAX = misfit.d.norm(\"linf\")\n",
+      "noise_std_dev = rel_noise * MAX\n",
+      "randn_perturb(misfit.d, noise_std_dev)\n",
+      "misfit.noise_variance = noise_std_dev*noise_std_dev\n",
+      "\n",
+      "vmax = max( utrue.max(), misfit.d.max() )\n",
+      "vmin = min( utrue.min(), misfit.d.min() )\n",
       "\n",
       "plt.figure(figsize=(15,5))\n",
       "nb.plot(dl.Function(Vh[STATE], utrue), mytitle=\"True State\", subplot_loc=121, vmin=vmin, vmax=vmax)\n",
-      "nb.plot_pts(targets, model.u_o, mytitle=\"Observations\", subplot_loc=122, vmin=vmin, vmax=vmax)\n",
+      "nb.plot_pts(targets, misfit.d, mytitle=\"Observations\", subplot_loc=122, vmin=vmin, vmax=vmax)\n",
       "plt.show()"
      ],
      "language": "python",
@@ -389,15 +455,22 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##Test the gradient and the Hessian of the model\n",
+      "##Set up the model and test gradient and Hessian\n",
       "\n",
-      "We test the gradient and the Hessian of the model using finite differences."
+      "The model is defined by three component:\n",
+      "- the `PDEVariationalProblem` `pde` which provides methods for the solution of the forward problem, adjoint problem, and incremental forward and adjoint problems.\n",
+      "- the `Prior` `prior` which provides methods to apply the regularization (*precision*) operator to a vector or to apply the prior covariance operator (i.e. to solve linear system with the regularization operator)\n",
+      "- the `Misfit` `misfit` which provides methods to compute the cost functional and its partial derivatives with respect to the state and parameter variables.\n",
+      "\n",
+      "To test gradient and the Hessian of the model we use forward finite differences."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "model = Model(pde, prior, misfit)\n",
+      "\n",
       "a0 = dl.interpolate(dl.Expression(\"sin(x[0])\"), Vh[PARAMETER])\n",
       "modelVerify(model, a0.vector(), 1e-12)"
      ],
@@ -472,13 +545,10 @@
       "p = 20\n",
       "print \"Single/Double Pass Algorithm. Requested eigenvectors: {0}; Oversampling {1}.\".format(k,p)\n",
       "Omega = np.random.randn(x[PARAMETER].array().shape[0], k+p)\n",
-      "#d, U = singlePassG(Hmisfit, prior.R, prior.Rsolver, Omega, k)\n",
       "d, U = doublePassG(Hmisfit, prior.R, prior.Rsolver, Omega, k)\n",
       "\n",
       "posterior = GaussianLRPosterior(prior, d, U)\n",
       "posterior.mean = x[PARAMETER]\n",
-      "\n",
-      "#d2, U2 = singlePass(Hmisfit, Omega, k)\n",
       "\n",
       "plt.plot(range(0,k), d, 'b*', range(0,k+1), np.ones(k+1), '-r')\n",
       "plt.yscale('log')\n",
@@ -502,9 +572,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "compute_trace = False\n",
+      "compute_trace = True\n",
       "if compute_trace:\n",
-      "    post_tr, prior_tr, corr_tr = posterior.trace(method=\"Estimator\", tol=5e-2, min_iter=20, max_iter=200)\n",
+      "    post_tr, prior_tr, corr_tr = posterior.trace(method=\"Estimator\", tol=5e-2, min_iter=20, max_iter=2000)\n",
       "    print \"Posterior trace {0:5e}; Prior trace {1:5e}; Correction trace {2:5e}\".format(post_tr, prior_tr, corr_tr)\n",
       "post_pw_variance, pr_pw_variance, corr_pw_variance = posterior.pointwise_variance(\"Exact\")\n",
       "\n",
