--- a/tutorial/AdvectionDiffusionBayesian.ipynb
+++ b/tutorial/AdvectionDiffusionBayesian.ipynb
@@ -391,9 +391,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "compute_trace = False\n",
+      "compute_trace = True\n",
       "if compute_trace:\n",
-      "    post_tr, prior_tr, corr_tr = posterior.trace()\n",
+      "    post_tr, prior_tr, corr_tr = posterior.trace(method=\"Estimator\", tol=5e-2, min_iter=20, max_iter=2000)\n",
       "    print \"Posterior trace {0:5g}; Prior trace {1:5g}; Correction trace {2:5g}\".format(post_tr, prior_tr, corr_tr)\n",
       "post_pw_variance, pr_pw_variance, corr_pw_variance = posterior.pointwise_variance()\n",
       "\n",
