Last touches to the tutorials

--- a/tutorial/2_SubsurfaceBayesian.ipynb
+++ b/tutorial/2_SubsurfaceBayesian.ipynb
@@ -64,7 +64,7 @@
       "\\end{align}\n",
       "$\n",
       "\n",
-      "Note that the infinite-dimensional analog of Bayes' formula cannot be stated  formulated  using pdfs but requires Radon-Nikodym derivatives\n",
+      "Note that infinite-dimensional analog of Bayes' formula requires the use Radon-Nikodym derivatives instead of probability density functions.\n",
       "\n",
       "### Gaussian prior and noise:\n",
       "\n",
@@ -111,54 +111,48 @@
       "the Hessian matrix of $\\mathcal{J}$ at $\\map$, namely\n",
       "\n",
       "$\n",
-      "\\bf \\Gamma_{\\text{post}} = \\left(\\Hmisfit(\\map) + \\bf \\Gamma_{\\text{prior}}^{-1} \\right)^{-1} \n",
-      "= \\left(\\prcov \\Hmisfit + \\matrix{I}\\right)^{-1}\\prcov\n",
+      "\\bf \\Gamma_{\\text{post}} = \\left(\\Hmisfit(\\map) + \\bf \\Gamma_{\\text{prior}}^{-1} \\right)^{-1}\n",
       "$\n",
       "\n",
       "#### The prior-preconditioned Hessian of the data misfit:\n",
       "\n",
       "$\n",
-      "  \\HT := \\prcov \\Hmisfit\n",
+      "  \\HT := \\prcov^{1/2} \\Hmisfit \\prcov^{1/2}\n",
       "$\n",
       "\n",
       "#### The generalized eigenvalue problem:\n",
       "\n",
       "$\n",
-      " \\Hmisfit \\matrix{W} = \\prcov^{-1} \\matrix{W} \\matrix{\\Lambda},\n",
+      " \\Hmisfit \\matrix{V} = \\prcov^{-1} \\matrix{V} \\matrix{\\Lambda},\n",
       "$\n",
       "\n",
       "where $\\matrix{\\Lambda} = diag(\\lambda_i) \\in \\mathbb{R}^{n\\times n}$\n",
-      "contains the generalized eigenvalues and the columns of $\\matrix W\\in\n",
+      "contains the generalized eigenvalues and the columns of $\\matrix V\\in\n",
       "\\mathbb R^{n\\times n}$ the generalized eigenvectors such that \n",
-      "$\\matrix{W}^T \\prcov^{-1} \\matrix{W} = \\matrix{I}$. Defining \n",
-      "$\\matrix V := \\prcov^{-1}\\matrix W$\n",
+      "$\\matrix{V}^T \\prcov^{-1} \\matrix{V} = \\matrix{I}$.\n",
       "\n",
-      "$\n",
-      "\\prcov \\Hmisfit = \\matrix{W} \\matrix{\\Lambda} \\matrix{V}^T.\n",
-      "$\n",
-      "\n",
-      "#### Randomized SVD algorithms to construct the approximate spectral decomposition:  \n",
+      "#### Randomized eigensolvers to construct the approximate spectral decomposition:  \n",
       "\n",
       "When the generalized eigenvalues $\\{\\lambda_i\\}$ decay rapidly, we can\n",
-      "extract a low-rank approximation of $\\HT$ by retaining only the $r$\n",
+      "extract a low-rank approximation of $\\Hmisfit$ by retaining only the $r$\n",
       "largest eigenvalues and corresponding eigenvectors,\n",
       "\n",
       "$\n",
-      "\\HT \\approx \\matrix{W}_r \\matrix{\\Lambda}_r \\matrix{V}_r^T.\n",
+      " \\HT = \\prcov^{-1/2} \\matrix{V}_r \\matrix{\\Lambda}_r \\matrix{V}^T_r \\prcov^{-1/2},\n",
       "$\n",
       "\n",
-      "Here, $\\matrix{W}_r \\in \\mathbb{R}^{n\\times r}$ contains only the $r$\n",
-      "eigenvectors of $\\HT$ that correspond to the $r$ largest eigenvalues,\n",
+      "Here, $\\matrix{V}_r \\in \\mathbb{R}^{n\\times r}$ contains only the $r$\n",
+      "generalized eigenvectors of $\\Hmisfit$ that correspond to the $r$ largest eigenvalues,\n",
       "which are assembled into the diagonal matrix $\\matrix{\\Lambda}_r = \\diag\n",
-      "(\\lambda_i) \\in \\mathbb{R}^{r \\times r}$, and\n",
-      "$\\matrix{V}_r=\\prcov^{-1} \\matrix{W}_r$.\n",
+      "(\\lambda_i) \\in \\mathbb{R}^{r \\times r}$.\n",
       "\n",
-      "#### Invert with the Sherman-Morrison-Woodbury formula:\n",
+      "#### The approximate posterior covariance::\n",
       "\n",
+      "Using the Sherman\u2013Morrison\u2013Woodbury formula, we write\n",
       "$$\n",
       "\\begin{align}\n",
-      "  \\notag \\left(\\HT+ \\matrix{I}\\right)^{-1}\n",
-      "  = \\matrix{I}-\\matrix{W}_r \\matrix{D}_r \\matrix{V}_r^T +\n",
+      "  \\notag \\postcov = \\left(\\Hmisfit+ \\prcov^{-1}\\right)^{-1}\n",
+      "  = \\prcov^{-1}-\\matrix{V}_r \\matrix{D}_r \\matrix{V}_r^T +\n",
       "  \\mathcal{O}\\left(\\sum_{i=r+1}^{n} \\frac{\\lambda_i}{\\lambda_i +\n",
       "    1}\\right),\n",
       "\\end{align}\n",
@@ -170,29 +164,22 @@
       "provides a criterion for truncating the spectrum, namely that $r$ is\n",
       "chosen such that $\\lambda_r$ is small relative to 1. \n",
       "\n",
-      "#### The approximate posterior covariance:\n",
+      "Therefore we can approximate the posterior covariance as\n",
       "\n",
       "$$\n",
-      "\\postcov \\approx (\\matrix{I} - \\matrix{W}_r \\matrix{D}_r\n",
-      "\\matrix{V}_r^T) \\prcov = \n",
-      "\\prcov\n",
-      "- \\matrix{W}_r \\matrix{D}_r \\matrix{W}_r^T\n",
+      "\\postcov \\approx \\prcov - \\matrix{V}_r \\matrix{D}_r\n",
+      "\\matrix{V}_r^T\n",
       "$$\n",
       "\n",
-      "#### Apply the inverse and square-root inverse Hessian to a vector (as needed for drawing samples from a Gaussian distribution with covariance $\\H^{-1}$)\n",
+      "#### Drawing samples from a Gaussian distribution with covariance $\\H^{-1}$\n",
       "\n",
+      "Let $\\bf x$ be a sample for the prior distribution, i.e. $\\bf x \\sim \\mathcal{N}({\\bf 0}, \\prcov)$, then, using the low rank approximation of the posterior covariance, we compute a sample ${\\bf v} \\sim \\mathcal{N}({\\bf 0}, \\H^{-1})$ as \n",
       "$$\n",
-      "  \\H^{-1} \\bf v \\approx ( \\matrix{I}-\\Wr \\Dr \\Vr^T)\n",
-      "  \\prcov \\bf v =  \\big\\{ \\bf W_r \\big[ (\\matrix{\\Lambda}_r +\n",
-      "    \\bf I_r)^{-1} - \\bf I_r \\big]  \\Vr^T + \\bf I \\big\\} \\prcov \\bf v\n",
-      "$$\n",
-      " \n",
-      "$$\n",
-      "  \\H^{-1/2} \\bf v \\approx \\big\\{ \\Wr \\big[ (\\matrix{\\Lambda}_r +\n",
-      "    \\Ir)^{-1/2} - \\Ir \\big] \\Vr^T  + \\bf I \\big\\} \\prcov^{1/2}\\bf v\n",
+      "  {\\bf v} = \\big\\{ \\Vr \\big[ (\\matrix{\\Lambda}_r +\n",
+      "    \\Ir)^{-1/2} - \\Ir \\big] \\Vr^T\\prcov^{-1}  + \\bf I \\big\\} {\\bf x} \n",
       "$$\n",
       "\n",
-      "### This tutorial shows:\n",
+      "## This tutorial shows:\n",
       "\n",
       "- description of the inverse problem (the forward problem, the prior, and the misfit functional)\n",
       "- convergence of the inexact Newton-CG algorithm\n",
@@ -202,7 +189,7 @@
       "- how to apply the inverse and square-root inverse Hessian to a vector efficiently\n",
       "- samples from the Gaussian approximation of the posterior\n",
       "\n",
-      "### Goals:\n",
+      "## Goals:\n",
       "\n",
       "By the end of this notebook, you should be able to:\n",
       "\n",
@@ -210,20 +197,28 @@
       "- visualise and understand the results\n",
       "- modify the problem and code\n",
       "\n",
-      "### Mathematical tools used:\n",
+      "## Mathematical tools used:\n",
       "\n",
       "- Finite element method\n",
       "- Derivation of gradiant and Hessian via the adjoint method\n",
       "- inexact Newton-CG\n",
       "- Armijo line search\n",
       "- Bayes' formula\n",
+      "- randomized eigensolvers\n",
       "\n",
-      "### List of software used:\n",
+      "## List of software used:\n",
       "\n",
       "- <a href=\"http://fenicsproject.org/\">FEniCS</a>, a parallel finite element element library for the discretization of partial differential equations\n",
       "- <a href=\"http://www.mcs.anl.gov/petsc/\">PETSc</a>, for scalable and efficient linear algebra operations and solvers\n",
       "- <a href=\"http://matplotlib.org/\">Matplotlib</a>, A great python package that I used for plotting many of the results\n",
       "- <a href=\"http://www.numpy.org/\">Numpy</a>, A python package for linear algebra.  While extensive, this is mostly used to compute means and sums in this notebook."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## 1. Load modules"
      ]
     },
     {
@@ -255,7 +250,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Generate the true parameter\n",
+      "## 2. Generate the true parameter\n",
       "\n",
       "This function generates a random field with a prescribed anysotropic covariance function."
      ]
@@ -283,7 +278,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##Set up the mesh and finite element spaces\n",
+      "## 3. Set up the mesh and finite element spaces\n",
       "\n",
       "We compute a two dimensional mesh of a unit square with nx by ny elements.\n",
       "We define a P2 finite element space for the *state* and *adjoint* variable and P1 for the *parameter*."
@@ -310,7 +305,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Set up the forward problem\n",
+      "## 4. Set up the forward problem\n",
       "\n",
       "To set up the forward problem we use the `PDEVariationalProblem` class, which requires the following inputs\n",
       "- the finite element spaces for the state, parameter, and adjoint variables `Vh`\n",
@@ -349,7 +344,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##Set up the prior\n",
+      "## 4. Set up the prior\n",
       "\n",
       "To obtain the synthetic true paramter $a_{\\rm true}$ we generate a realization of a Gaussian random field with zero average and covariance matrix $\\mathcal{C} = \\widetilde{\\mathcal{A}}^{-2}$, where $\\widetilde{\\mathcal{A}}$ is a differential operator of the form\n",
       "$$ \\widetilde{\\mathcal{A}} = \\gamma {\\rm div}\\, \\Theta\\, {\\rm grad} + \\delta I. $$\n",
@@ -410,7 +405,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Set up the misfit functional and generate synthetic observations\n",
+      "## 5. Set up the misfit functional and generate synthetic observations\n",
       "\n",
       "To setup the observation operator, we generate *ntargets* random locations where to evaluate the value of the state.\n",
       "\n",
@@ -455,7 +450,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##Set up the model and test gradient and Hessian\n",
+      "## 6. Set up the model and test gradient and Hessian\n",
       "\n",
       "The model is defined by three component:\n",
       "- the `PDEVariationalProblem` `pde` which provides methods for the solution of the forward problem, adjoint problem, and incremental forward and adjoint problems.\n",
@@ -482,7 +477,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##Compute the MAP point\n",
+      "## 7. Compute the MAP point\n",
       "\n",
       "We used the globalized Newtown-CG method to compute the MAP point."
      ]
@@ -524,11 +519,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##Compute the low rank Gaussian approximation of the posterior\n",
-      "We used the *single pass* algorithm to compute a low-rank decomposition of the Hessian Misfit.\n",
+      "## 8. Compute the low rank Gaussian approximation of the posterior\n",
+      "We used the *double pass* algorithm to compute a low-rank decomposition of the Hessian Misfit.\n",
       "In particular, we solve\n",
       "\n",
-      "$$ H_{\\rm misfit} u = \\lambda R u. $$\n",
+      "$$ \\Hmisfit} {\\bf u} = \\lambda \\prcov^{-1} {\\bf u}. $$\n",
       "\n",
       "The Figure shows the largest *k* generalized eigenvectors of the Hessian misfit.\n",
       "The effective rank of the Hessian misfit is the number of eigenvalues above the red line (y=1).\n",
@@ -565,7 +560,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Prior and posterior pointwise variance fields"
+      "## 9. Prior and posterior pointwise variance fields"
      ]
     },
     {
@@ -592,7 +587,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##Generate samples from Prior and Posterior"
+      "## 10. Generate samples from Prior and Posterior"
      ]
     },
     {
@@ -621,6 +616,20 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Copyright (c) 2016, The University of Texas at Austin & University of California, Merced.\n",
+      "All Rights reserved.\n",
+      "See file COPYRIGHT for details.\n",
+      "\n",
+      "This file is part of the hIPPYlib library. For more information and source code\n",
+      "availability see https://hippylib.github.io.\n",
+      "\n",
+      "hIPPYlib is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License (as published by the Free Software Foundation) version 2.1 dated February 1999."
+     ]
     }
    ],
    "metadata": {}
