--- a/tutorial/3_AdvectionDiffusionBayesian.ipynb
+++ b/tutorial/3_AdvectionDiffusionBayesian.ipynb
@@ -109,6 +109,13 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## 1. Load modules"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -139,7 +146,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##Construction of the velocity field"
+      "## 2. Construct the velocity field"
      ]
     },
     {
@@ -194,7 +201,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##Set up the mesh and finite element spaces"
+      "## 3. Set up the mesh and finite element spaces"
      ]
     },
     {
@@ -214,7 +221,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Set up model (prior, true/proposed initial condition)"
+      "## 4. Set up model (prior, true/proposed initial condition)"
      ]
     },
     {
@@ -247,7 +254,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Generate the synthetic observations"
+      "## 5. Generate the synthetic observations"
      ]
     },
     {
@@ -274,7 +281,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##Test the gradient and the Hessian of the cost (negative log posterior)"
+      "## 6. Test the gradient and the Hessian of the cost (negative log posterior)"
      ]
     },
     {
@@ -292,7 +299,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##Evaluate the gradient and apply the Hessian to a vector"
+      "## 7. Evaluate the gradient"
      ]
     },
     {
@@ -305,9 +312,7 @@
       "mg = problem.generate_vector(PARAMETER)\n",
       "grad_norm = problem.evalGradientParameter([u,a,p], mg)\n",
       "        \n",
-      "print \"(g,g) = \", grad_norm\n",
-      "    \n",
-      "H = ReducedHessian(problem, 1e-12, gauss_newton_approx=False, misfit_only=True) "
+      "print \"(g,g) = \", grad_norm"
      ],
      "language": "python",
      "metadata": {},
@@ -317,19 +322,21 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## The Gaussian approximation of the posterior"
+      "## 8. The Gaussian approximation of the posterior"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "H = ReducedHessian(problem, 1e-12, gauss_newton_approx=False, misfit_only=True) \n",
+      "\n",
       "k = 80\n",
       "p = 20\n",
       "print \"Single Pass Algorithm. Requested eigenvectors: {0}; Oversampling {1}.\".format(k,p)\n",
       "Omega = np.random.randn(a.array().shape[0], k+p)\n",
       "d, U = singlePassG(H, prior.R, prior.Rsolver, Omega, k)\n",
-      "#d, U = singlePass(H, Omega, k)\n",
+      "\n",
       "\n",
       "posterior = GaussianLRPosterior( prior, d, U )\n",
       "\n",
@@ -348,7 +355,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "##Compute the MAP point"
+      "## 9. Compute the MAP point"
      ]
     },
     {
@@ -384,7 +391,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Prior and posterior pointwise variance fields"
+      "## 10. Prior and posterior pointwise variance fields"
      ]
     },
     {
@@ -411,7 +418,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Draw samples from the prior and posterior distributions"
+      "## 11. Draw samples from the prior and posterior distributions"
      ]
     },
     {
@@ -441,6 +448,20 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Copyright (c) 2016, The University of Texas at Austin & University of California, Merced.\n",
+      "All Rights reserved.\n",
+      "See file COPYRIGHT for details.\n",
+      "\n",
+      "This file is part of the hIPPYlib library. For more information and source code\n",
+      "availability see https://hippylib.github.io.\n",
+      "\n",
+      "hIPPYlib is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License (as published by the Free Software Foundation) version 2.1 dated February 1999."
+     ]
     }
    ],
    "metadata": {}
