--- a/tutorial/1_FEniCS101.ipynb
+++ b/tutorial/1_FEniCS101.ipynb
@@ -386,6 +386,20 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Copyright (c) 2016, The University of Texas at Austin & University of California, Merced.\n",
+      "All Rights reserved.\n",
+      "See file COPYRIGHT for details.\n",
+      "\n",
+      "This file is part of the hIPPYlib library. For more information and source code\n",
+      "availability see https://hippylib.github.io.\n",
+      "\n",
+      "hIPPYlib is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License (as published by the Free Software Foundation) version 2.1 dated February 1999."
+     ]
     }
    ],
    "metadata": {}
