--- a/tutorial/README
+++ b/tutorial/README
@@ -1,9 +1,9 @@
 Content:
 
-- FEniCS101 notebook illustrates the use of FEniCS for the solution of a linear boundary value problem.
-- SubsurfaceBayesian notebook illustrates how to solve a non-linear parameter inversion for the Poisson equation in a Bayesian setting.
-- AdvectionDiffusionBayesian notebook illustrates how to solve a time-dependent linear inverse problem in a Bayesian setting.
-- HessianSpectrum notebook illustrates the spectral property of the Hessian operator for a linear source inversion problem.
+1. FEniCS101 notebook illustrates the use of FEniCS for the solution of a linear boundary value problem.
+2. SubsurfaceBayesian notebook illustrates how to solve a non-linear parameter inversion for the Poisson equation in a Bayesian setting.
+3. AdvectionDiffusionBayesian notebook illustrates how to solve a time-dependent linear inverse problem in a Bayesian setting.
+4. HessianSpectrum notebook illustrates the spectral property of the Hessian operator for a linear source inversion problem.
 
 - nb.py: a collection of plotting utilities using matplotlib
 
